--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -6,9 +6,29 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <%= link_to("登录", '#') %>
+
+              <!-- !current_user 未登录 -->
+              <% if !current_user %>
+                <!-- new_user_registration_path 返回值为 /users/sign_up -->
+                <li><%= link_to("注册", new_user_registration_path) %></li>
+                <!-- new_user_session_path 返回值为 /users/sign_in -->
+                <li><%= link_to("登录", new_user_session_path) %></li>
+              <% else %>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <!-- current_user 当前登入用户 -->
+                    Hi!, <%= current_user.email %>
+                    <b class="caret"></b>
+                  </a>
+
+                  <ul class="dropdown-menu">
+                    <!-- destroy_user_session_path 返回值为 /users/sign_out -->
+                    <li><%= link_to("退出", destroy_user_session_path,
+                                    method: :delete) %>
+                    </li>
+                  </ul>
                 </li>
+              <% end %>
             </ul>
         </div>
     </div>
