--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,11 @@
 <div class="col-md-12">
   <div class="group">
-    <!-- edit_group_path(@group) 辅助方法, 返回值为 /groups/:id/edit -->
-    <%= link_to("Edit", edit_group_path(@group),
-                class: "btn btn-primary pull-right") %>
+    <% if current_user && current_user == @group.user %>
+      <!-- edit_group_path(@group) 辅助方法, 返回值为 /groups/:id/edit -->
+      <%= link_to("Edit", edit_group_path(@group),
+                  class: "btn btn-primary pull-right") %>
+    <% end %>
+
     <h2><%= @group.title %></h2>
     <p><%= @group.description %></p>
   </div>
