--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,8 @@
 <div class="col-md-12">
   <div class="group">
+    <%= link_to("Write a Post", new_group_post_path(@group),
+                class: "btn btn-default pull-right") %>
+
     <% if current_user && current_user == @group.user %>
       <!-- edit_group_path(@group) 辅助方法, 返回值为 /groups/:id/edit -->
       <%= link_to("Edit", edit_group_path(@group),
