--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -31,5 +31,9 @@
         <% end %>
       </tbody>
     </table>
+
+    <div class="text-center">
+      <%= will_paginate @posts %>
+    </div>
   </div>
 </div>
