--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -23,6 +23,7 @@
 
                   <ul class="dropdown-menu">
                     <li><%= link_to("My Groups", account_groups_path) %></li>
+                    <li><%= link_to("My Posts", account_posts_path) %></li>
                     <li class="divider"></li>
                     <!-- destroy_user_session_path 返回值为 /users/sign_out -->
                     <li><%= link_to("退出", destroy_user_session_path,
