--- a/app/views/account/posts/index.html.erb
+++ b/app/views/account/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <h2 class="text-center">我发表过的文章</h2>
+  <h2 class="text-center">我发表过的Posts</h2>
 
   <table class="table">
     <thead>
@@ -22,7 +22,7 @@
           <td><%= link_to('Delete', group_post_path(post.group, post),
                           method: :delete,
                           data: { confirm: "Are you sure?"},
-                          class: "btn btn-default btn-xs") %></td>          
+                          class: "btn btn-default btn-xs") %></td>
         </tr>
       <% end %>
     </tbody>
