render_group_description(group)

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,7 +20,7 @@
           <td>#</td>
           <!-- group_path(group) 辅助方法, 返回值为 /groups/:id -->
           <td><%= link_to(group.title, group_path(group)) %></td>
-          <td><%= simple_format(group.description) %></td>
+          <td><%= render_group_description(group) %></td>
           <!-- group.user 返回当时创建群组的 User实例 -->
           <td><%= group.user.email %></td>
           <td>
