--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -22,7 +22,7 @@
     <% end %>
 
     <h2><%= @group.title %></h2>
-    <p><%= @group.description %></p>
+    <p><%= render_group_description(@group) %></p>
 
     <table class="table">
       <thead>
